src/snapshots/zeek_lsp__lsp__test__completion.snap
---
source: src/lsp.rs
assertion_line: 1197
expression: result

---
Ok(
    Some(
        Array(
            [
                CompletionItem {
                    label: "mod_x::X",
                    kind: Some(
                        Variable,
                    ),
                    detail: None,
                    documentation: Some(
                        String(
                            "```zeek\nglobal X = 3;\n```",
                        ),
                    ),
                    deprecated: None,
                    preselect: None,
                    sort_text: None,
                    filter_text: None,
                    insert_text: None,
                    insert_text_format: None,
                    insert_text_mode: None,
                    text_edit: None,
                    additional_text_edits: None,
                    command: None,
                    commit_characters: None,
                    data: None,
                    tags: None,
                },
            ],
        ),
    ),
)
