src/snapshots/zeek_lsp__lsp__test__hover_decl_in_func_parameters.snap
---
source: src/lsp.rs
assertion_line: 1126
expression: server.hover(params).await

---
Ok(
    Some(
        Hover {
            contents: Array(
                [
                    LanguageString(
                        LanguageString {
                            language: "zeek",
                            value: "y",
                        },
                    ),
                    LanguageString(
                        LanguageString {
                            language: "lisp",
                            value: "(id)",
                        },
                    ),
                    String(
                        "```zeek\ny: Y\n```",
                    ),
                ],
            ),
            range: Some(
                Range {
                    start: Position {
                        line: 1,
                        character: 0,
                    },
                    end: Position {
                        line: 1,
                        character: 1,
                    },
                },
            ),
        },
    ),
)
