src/snapshots/zeek_lsp__lsp__test__resolve-3.snap
---
source: src/lsp.rs
assertion_line: 1268
expression: "super::resolve(&db, node, None, uri.clone())"

---
Some(
    Decl {
        module: String(
            "x",
        ),
        id: "y",
        fqid: "x::y",
        kind: Global,
        is_export: Some(
            false,
        ),
        range: Range {
            start: Position {
                line: 23,
                character: 0,
            },
            end: Position {
                line: 23,
                character: 12,
            },
        },
        selection_range: Range {
            start: Position {
                line: 23,
                character: 7,
            },
            end: Position {
                line: 23,
                character: 8,
            },
        },
        documentation: "```zeek\nglobal y: Y;\n```",
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "/x.zeek",
            query: None,
            fragment: None,
        },
    },
)
