src/snapshots/zeek_lsp__lsp__test__resolve-5.snap
---
source: src/lsp.rs
assertion_line: 1282
expression: "super::resolve(&db, node, None, uri.clone())"

---
Some(
    Decl {
        module: None,
        id: "f1",
        fqid: "x::X::f1",
        kind: Variable,
        is_export: false,
        range: Range {
            start: Position {
                line: 3,
                character: 4,
            },
            end: Position {
                line: 3,
                character: 6,
            },
        },
        selection_range: Range {
            start: Position {
                line: 3,
                character: 4,
            },
            end: Position {
                line: 3,
                character: 6,
            },
        },
        documentation: "```zeek\n# In x::X\nf1: count &optional;\n```",
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "/x.zeek",
            query: None,
            fragment: None,
        },
    },
)
