src/snapshots/zeek_lsp__lsp__test__resolve.snap
---
source: src/lsp.rs
assertion_line: 1262
expression: "super::resolve(&db, node, None, uri.clone())"

---
Some(
    Decl {
        module: String(
            "x",
        ),
        id: "c",
        fqid: "x::c",
        kind: Global,
        is_export: false,
        range: Range {
            start: Position {
                line: 10,
                character: 0,
            },
            end: Position {
                line: 10,
                character: 16,
            },
        },
        selection_range: Range {
            start: Position {
                line: 10,
                character: 7,
            },
            end: Position {
                line: 10,
                character: 8,
            },
        },
        documentation: "```zeek\nglobal c: count;\n```",
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "/x.zeek",
            query: None,
            fragment: None,
        },
    },
)
